--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -24,6 +24,9 @@ h1, h2, h3, h4, h5, .navbar-brand, .card-title {
     backdrop-filter: blur(10px);
 }
 
+.text-muted {
+    color: #a0a0a0 !important;
+}
 .nav-link {
     text-transform: uppercase;
     font-weight: bold;
